<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="changelog">Changelog</string>
    <string name="powered_by">Powered by</string>
    <string name="hermes">Hermes</string>
    <string name="logo">logo</string>
    <string name="heartReactionText">❤️ %1$s</string>
    <string name="smileReactionText">😃 %1$s</string>
    <string name="fireReactionText">🔥 %1$s</string>
    <string name="thumbsUpReactionText">👍🏼 %1$s</string>
    <string name="thumbsDownReactionText">👎🏼 %1$s</string>
    <string name="sobReactionText">😢 %1$s</string>
</resources>