<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/size_18"
    android:paddingStart="@dimen/size_18"
    android:paddingEnd="@dimen/size_18"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/header"
        android:fontFamily="@font/ttinterfaces_black"
        android:textSize="@dimen/font_24"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="@dimen/size_5"
        android:layout_width="wrap_content"
        android:id="@+id/content"
        android:textColor="@color/black"
        android:fontFamily="@font/ttinterfaces_regular"
        android:textSize="@dimen/font_16"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content" />


<com.google.android.flexbox.FlexboxLayout
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/size_6"
    app:layout_constraintTop_toBottomOf="@id/content"
    app:flexWrap="wrap"
    app:showDivider="middle|end"
    app:dividerDrawable="@drawable/divider"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:fontFamily="@font/ttinterfaces_regular"
        android:id="@+id/heartButton"
        android:textColor="@color/black"
        android:textSize="@dimen/font_14"
        android:background="@drawable/reaction_button_bg"
        android:text="@string/heartReactionText"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:id="@+id/smileButton"
        android:fontFamily="@font/ttinterfaces_regular"
        android:minHeight="0dp"
        android:textSize="@dimen/font_14"
        android:minWidth="0dp"
        android:textColor="@color/black"
        android:background="@drawable/reaction_button_bg"
        android:text="@string/smileReactionText"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:id="@+id/fireButton"
        android:textSize="@dimen/font_14"
        android:minHeight="0dp"
        android:fontFamily="@font/ttinterfaces_regular"
        android:minWidth="0dp"
        android:textColor="@color/black"
        android:background="@drawable/reaction_button_bg"
        android:text="@string/fireReactionText"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:id="@+id/thumbsUpButton"
        android:textColor="@color/black"
        android:fontFamily="@font/ttinterfaces_regular"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:textSize="@dimen/font_14"
        android:background="@drawable/reaction_button_bg"
        android:text="@string/thumbsUpReactionText"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:id="@+id/thumbsDownButton"
        android:textColor="@color/black"
        android:fontFamily="@font/ttinterfaces_regular"
        android:minHeight="0dp"
        android:textSize="@dimen/font_14"
        android:minWidth="0dp"
        android:background="@drawable/reaction_button_bg"
        android:text="@string/thumbsDownReactionText"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:id="@+id/sobButton"
        android:textColor="@color/black"
        android:textSize="@dimen/font_14"
        android:fontFamily="@font/ttinterfaces_regular"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:background="@drawable/reaction_button_bg"
        android:text="@string/sobReactionText"
        android:layout_height="wrap_content" />

</com.google.android.flexbox.FlexboxLayout>


</androidx.constraintlayout.widget.ConstraintLayout>