<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/systemGray5"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="@dimen/size_20"
        android:paddingEnd="@dimen/size_20"
        android:background="@color/white"
        android:paddingBottom="@dimen/size_14"
        android:gravity="start"
        android:paddingTop="@dimen/size_50"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/changelog"
            android:textSize="@dimen/font_24"
            android:textColor="@color/black"
            android:fontFamily="@font/ttinterfaces_black"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"

            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/powered_by"
                android:textSize="@dimen/font_12"
                android:textColor="@color/black"
                android:layout_marginEnd="@dimen/size_4"
                android:fontFamily="@font/ttinterfaces_regular"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_width="@dimen/font_20"
                android:scaleType="centerInside"
                android:src="@drawable/logo"
                android:layout_height="@dimen/size_10"
                android:contentDescription="@string/changelog" />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/hermes"
                android:textSize="@dimen/font_12"
                android:layout_marginStart="@dimen/size_4"
                android:textColor="@color/black"
                android:fontFamily="@font/ttinterfaces_regular"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_marginTop="@dimen/size_40"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="@dimen/size_48"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/size_10"
        android:background="@null"
        android:src="@drawable/close"
        android:padding="@dimen/size_10"
        android:id="@+id/close_button"
        style="?android:attr/borderlessButtonStyle"
        android:textAllCaps="false"
        android:gravity="center"
        android:layout_height="@dimen/size_48"/>

</androidx.constraintlayout.widget.ConstraintLayout>